#### Build 1001 ####

* Created TPL: Trash Programming Language