@@ -2,12 +2,14 @@
 <project version="4">
   <component name="ChangeListManager">
     <list default="true" id="aae2efb2-7778-4cc3-ae20-bcb51cee43a1" name="Default Changelist" comment="">
-      <change afterPath="$PROJECT_DIR$/.idea/vcs.xml" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/lib/string.tp" afterDir="false" />
+      <change afterPath="$PROJECT_DIR$/doc/performance.txt" afterDir="false" />
+      <change afterPath="$PROJECT_DIR$/tp/mem2.tp" afterDir="false" />
+      <change afterPath="$PROJECT_DIR$/tp/perf.tp" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/bin/spl_environment.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_environment.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/bin/spl_interpreter.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_interpreter.py" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/bin/spl_memory.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_memory.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/tp/str.tp" beforeDir="false" afterPath="$PROJECT_DIR$/tp/str.tp" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/tpl.py" beforeDir="false" afterPath="$PROJECT_DIR$/tpl.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/doc/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/doc/changelog.txt" afterDir="false" />
     </list>
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -160,7 +162,7 @@
       <option name="ADD_SOURCE_ROOTS" value="true" />
       <EXTENSION ID="PythonCoverageRunConfigurationExtension" runner="coverage.py" />
       <option name="SCRIPT_NAME" value="$PROJECT_DIR$/tpl.py" />
-      <option name="PARAMETERS" value="-a -e tp/str.tp" />
+      <option name="PARAMETERS" value="-e tp/perf.tp" />
       <option name="SHOW_COMMAND_LINE" value="false" />
       <option name="EMULATE_TERMINAL" value="false" />
       <option name="MODULE_MODE" value="false" />
@@ -178,10 +180,10 @@
     <recent_temporary>
       <list>
         <item itemvalue="Python.tpl" />
+        <item itemvalue="Python.spl_memory" />
         <item itemvalue="Python.test1" />
         <item itemvalue="Python.compiler" />
         <item itemvalue="Python.spl_types" />
-        <item itemvalue="Python.spl_memory" />
       </list>
     </recent_temporary>
   </component>
@@ -228,6 +230,7 @@
       <workItem from="1575579965793" duration="23274000" />
       <workItem from="1575624531382" duration="256000" />
       <workItem from="1575625940401" duration="1502000" />
+      <workItem from="1575664687980" duration="7215000" />
     </task>
     <servers />
   </component>
@@ -235,32 +238,34 @@
     <option name="version" value="1" />
   </component>
   <component name="WindowStateProjectService">
-    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog" timestamp="1575626068600">
+    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog" timestamp="1575671545270">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog/0.0.1536.824@0.0.1536.824" timestamp="1575626068600" />
-    <state width="1493" height="210" key="GridCell.Tab.0.bottom" timestamp="1575626969366">
+    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog/0.0.1536.824@0.0.1536.824" timestamp="1575671545270" />
+    <state width="1493" height="210" key="GridCell.Tab.0.bottom" timestamp="1575671903448">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.bottom/0.0.1536.824@0.0.1536.824" timestamp="1575626969366" />
-    <state width="1493" height="210" key="GridCell.Tab.0.center" timestamp="1575626969365">
+    <state width="1493" height="210" key="GridCell.Tab.0.bottom/0.0.1536.824@0.0.1536.824" timestamp="1575671903448" />
+    <state width="1493" height="210" key="GridCell.Tab.0.center" timestamp="1575671903448">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.center/0.0.1536.824@0.0.1536.824" timestamp="1575626969365" />
-    <state width="1493" height="210" key="GridCell.Tab.0.left" timestamp="1575626969365">
+    <state width="1493" height="210" key="GridCell.Tab.0.center/0.0.1536.824@0.0.1536.824" timestamp="1575671903448" />
+    <state width="1493" height="210" key="GridCell.Tab.0.left" timestamp="1575671903447">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.left/0.0.1536.824@0.0.1536.824" timestamp="1575626969365" />
-    <state width="1493" height="210" key="GridCell.Tab.0.right" timestamp="1575626969365">
+    <state width="1493" height="210" key="GridCell.Tab.0.left/0.0.1536.824@0.0.1536.824" timestamp="1575671903447" />
+    <state width="1493" height="210" key="GridCell.Tab.0.right" timestamp="1575671903448">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.right/0.0.1536.824@0.0.1536.824" timestamp="1575626969365" />
+    <state width="1493" height="210" key="GridCell.Tab.0.right/0.0.1536.824@0.0.1536.824" timestamp="1575671903448" />
   </component>
   <component name="com.intellij.coverage.CoverageDataManagerImpl">
     <SUITE FILE_PATH="coverage/tpl3$spl.coverage" NAME="tpl Coverage Results" MODIFIED="1575626969342" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
     <SUITE FILE_PATH="coverage/spl3$spl_memory.coverage" NAME="spl_memory Coverage Results" MODIFIED="1574152361604" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/bin" />
+    <SUITE FILE_PATH="coverage/tpl3$tpl.coverage" NAME="tpl Coverage Results" MODIFIED="1575671903428" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
     <SUITE FILE_PATH="coverage/spl3$compiler.coverage" NAME="compiler Coverage Results" MODIFIED="1575438441013" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
     <SUITE FILE_PATH="coverage/spl3$spl_types.coverage" NAME="spl_types Coverage Results" MODIFIED="1575374052360" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/bin" />
+    <SUITE FILE_PATH="coverage/tpl3$spl_memory.coverage" NAME="spl_memory Coverage Results" MODIFIED="1575671110224" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/bin" />
     <SUITE FILE_PATH="coverage/spl3$test1.coverage" NAME="test1 Coverage Results" MODIFIED="1575538279899" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/sp" />
     <SUITE FILE_PATH="coverage/spl3$spl.coverage" NAME="spl Coverage Results" MODIFIED="1575608824667" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
   </component>
